diesel-builders/tests/ui/duplicate_sql_type_error.stderr
error: Duplicate sql_type attribute
 --> tests/ui/duplicate_sql_type_error.rs:8:14
  |
8 |     #[diesel(sql_type = diesel::sql_types::Text)]
  |              ^^^^^^^^
